# femsolver

./: .clang-format  .clang-tidy  .coderabbit.yaml  .editorconfig  .gitignore  Agent.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_validation.yml  bug_report.yml  feature_request.yml  release_checklist.yml
.github/repository-settings/: labels.yaml  milestones.yaml  ruleset-main.json
.github/workflows/: ci.yml  nightly.yml  release.yml
cases/benchmarks/: README.md
cases/machines/: README.md
cases/machines/exo_outer_rotor_36s40p/: README.md  case.yaml
cases/machines/joint_type_i_12s10p/: README.md  case.yaml
cases/machines/quadruped_joint_36s32p/: README.md  case.yaml
cases/machines/tbm76_envelope/: README.md  case.yaml
cases/regression/: README.md
changes/unreleased/: 0001-infra-bootstrap.yaml  0002-docs-implementation-process.yaml  0003-docs-solver-architecture.yaml  0004-docs-self-owned-kernel-roadmap.yaml  0005-docs-multiphysics-ai-expansion.yaml  0006-feat-v0.2.0-kernel-foundation.yaml  0007-docs-discretization-strategy.yaml  0008-feat-case-catalog-preprocessing.yaml  0009-feat-v0.3.0-vector-kernel-baseline.yaml  0010-docs-v0.3.0-case-and-kernel.yaml  0011-docs-v1-1-delivery-tracker.yaml  0012-feat-linear-magnetostatic-smoke.yaml  0013-feat-imported-mesh-smoke-path.yaml  0014-feat-linear-profile-binding.yaml  0015-feat-v1-machine-regression-and-torque.yaml  0016-feat-v2-coupling-analysis-foundation.yaml  0017-feat-v1-to-v2-foundation-chain.yaml  0018-docs-industrial-gap-audit.yaml
cmake/: ProjectOptions.cmake
docker/ci/: Dockerfile
docker/dev/: Dockerfile
docs/adr/: 0001-v0-baseline.md  0002-self-owned-kernel-direction.md  0003-tetra-p1-kernel-foundation.md
docs/architecture/: element-family-and-order-strategy.md  functional-architecture.md  industrial-nonlinear-multiphysics-gap-audit.md  kernel-architecture.md  kernel-module-boundaries.md  multiphysics-and-physics-ai.md  repository-layout.md  v1-v2-readiness-review.md
docs/governance/: github-admin.md
docs/implementation/: README.md  application-bootstrap.md  build-system-and-layout.md  case-catalog-and-preprocessing.md  github-automation-and-release.md  governance-and-docs.md  kernel-assembly-and-benchmark.md  kernel-mesh-topology.md  kernel-reference-basis-quadrature.md  linear-magnetostatic-smoke-path.md  testing-and-quality.md  v0.1.0-repository-baseline.md  v0.2.0-kernel-foundation.md  v0.3.0-vector-kernel-baseline.md  v1.0.0-solver-implementation-path.md  v1.1.0-nonlinear-bh-material.md  v1.2.0-hdiv-rt-benchmark.md  v1.3.0-hex-high-order-foundation.md  v2.0.0-coupling-foundation.md
docs/physics/: physical-architecture.md  solver-roadmap.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v2.0.0.md
include/femsolver/case/: case_spec.hpp
include/femsolver/core/: version.hpp
include/femsolver/coupling/: coupled_problem.hpp  field_state.hpp  operator_adapters.hpp  physics_operator.hpp
include/femsolver/excitation/: excitation_def.hpp
include/femsolver/fem/: discretization_strategy.hpp
include/femsolver/io/: text_report.hpp
src/: CMakeLists.txt
src/app/: motor_check_main.cpp  motor_pre_main.cpp  motor_solve_main.cpp
src/case/: case_spec.cpp
src/coupling/: coupled_problem.cpp  field_state.cpp  operator_adapters.cpp  physics_operator.cpp
src/excitation/: excitation_def.cpp
src/fem/: discretization_strategy.cpp
src/io/: text_report.cpp
src/kernel/algebra/: conjugate_gradient.cpp  sparse_matrix.cpp
src/kernel/assembly/: curl_curl_assembler.cpp  element_geometry.cpp  linear_magnetostatic_assembler.cpp  poisson_assembler.cpp
src/kernel/basis/: lagrange_hex_hexahedron.cpp  lagrange_p1_tetrahedron.cpp  nedelec_p1_tetrahedron.cpp  raviart_thomas_p0_tetrahedron.cpp
src/kernel/benchmark/: curl_curl_benchmark.cpp  hdiv_benchmark.cpp  poisson_benchmark.cpp
src/kernel/mesh/: tetra_mesh.cpp
src/kernel/quadrature/: hexahedron_quadrature.cpp  tetrahedron_quadrature.cpp
src/kernel/reference/: reference_hexahedron.cpp  reference_tetrahedron.cpp
src/kernel/space/: tetra_dof_map.cpp
src/material/: bh_curve.cpp  material_catalog.cpp
src/mesh/: gmsh_tetra_mesh_import.cpp  mesh_manifest.cpp
src/nonlinear/: nonlinear_policy.cpp
src/post/: linear_magnetostatic_summary.cpp  solution_bundle.cpp
src/solver/: joint_motor_linear_model.cpp  joint_motor_linear_smoke.cpp  project_status.cpp
tests/: CMakeLists.txt
tests/contract/: README.md
tests/integration/: README.md
tests/python/: test_analysis_tools.py  test_case_catalog_and_preprocess.py  test_repository_tools.py
tests/regression/: README.md
tests/unit/: case_spec_test.cpp  coupling_contract_test.cpp  coupling_operator_adapters_test.cpp  excitation_def_test.cpp  gmsh_tetra_mesh_import_test.cpp  joint_motor_linear_model_test.cpp  joint_motor_linear_smoke_test.cpp  kernel_curl_curl_benchmark_test.cpp  kernel_discretization_descriptor_test.cpp  kernel_element_geometry_test.cpp  kernel_hex_high_order_test.cpp  kernel_linear_magnetostatic_assembler_test.cpp  kernel_nedelec_basis_test.cpp  kernel_poisson_assembly_test.cpp  kernel_poisson_benchmark_test.cpp  kernel_quadrature_basis_test.cpp  kernel_reference_tetrahedron_test.cpp  kernel_rt_hdiv_benchmark_test.cpp  kernel_space_dof_map_test.cpp  kernel_sparse_matrix_test.cpp  kernel_tetra_mesh_test.cpp  material_bh_curve_test.cpp  material_catalog_test.cpp  mesh_manifest_test.cpp  nonlinear_policy_test.cpp  project_status_test.cpp  solution_bundle_test.cpp
tests/validation/: README.md
tools/analysis/: README.md  __init__.py  analyze_machine_report.py  check_inheritance_depth.py  version_readiness.py
tools/fenics/: README.md
tools/gmsh/: README.md  __init__.py  case_catalog.py  generate_joint_motor_case.py
tools/release/: README.md  render_release_notes.py
tools/scripts/: README.md  check_changelog.py  github_bootstrap.py
(+31 files in other folders)
